[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cuelist"
version = "0.1.0"
description = "A generic timeline library for scheduling and playing back clips"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/cuelist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
